--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.IdeasConnect"
         tools:targetApi="31">
         <activity
+            android:name=".ui.offer.OfferInvestmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.submit.SubmitIdeaActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.detail.DetailActivity"
             android:exported="false" />
         <activity
