--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,16 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.offer.OfferInvestmentActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/ActivityWithActionBar" />
         <activity
             android:name=".ui.submit.SubmitIdeaActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/ActivityWithActionBar" />
         <activity
             android:name=".ui.detail.DetailActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/ActivityWithActionBar" />
         <activity
             android:name=".ui.signup.SignupActivity"
             android:exported="false" />
